@@ -1,30 +1,43 @@
-package App;
+package com.application.model;
 
-import App.model.*;
+import com.application.utils.DialogsAndAlert;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
 
-import java.io.*;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 
 public class SettingsPersister {
-    private boolean prettyFile;
     private volatile JSONObject cache;
     private final Path p;
 
-    public SettingsPersister(String settingsfile){
-        this.prettyFile = true;
-        this.p = Path.of("src/main/resources"+settingsfile);
+    public SettingsPersister(Path settingsfile){
+        if (!Files.exists(settingsfile)){
+            this.p = Paths.get("/opt/datacollectorlinux/lib/app/config.json");
+            try {
+                Files.createFile(this.p);
+                //this.p = settingsfile;
+            } catch (IOException e) {
+                DialogsAndAlert.errorToDevTeam(e,"Config file does not exist or corrupted");
+            }
+        }else {
+            this.p = Paths.get("/opt/datacollectorlinux/lib/app/config.json");
+        }
         this.cache = create(this.p);
     }
 
     private synchronized JSONObject create(Path settingsFile) {
         try {
-            //Path p = Paths.get(SettingsPersister.class.getResource(settingsFile).getPath()).toAbsolutePath();
+            //Path p = Paths.get(SettingsPersister.class.getResource(String.valueOf(settingsFile)).getPath()).toAbsolutePath();
+            //System.out.println("JSON PATH : "+p.toAbsolutePath().toString());
             JSONObject json = null;
             if (Files.exists(settingsFile)) {
                 FileReader reader = new FileReader(settingsFile.toString());
@@ -38,7 +51,7 @@ public class SettingsPersister {
                 writer.close();
             }
             if (!Files.isWritable(p)) {
-                System.err.println("Non-writable settings file");
+                DialogsAndAlert.warning("Non-writable settings file");
                 return new JSONObject();
             }
             return json;
@@ -46,15 +59,16 @@ public class SettingsPersister {
             return new JSONObject();
         }
     }
-    private void commit() {
+    private synchronized void commit() {
         if (this.p == null)
             return;
+
         try {
             Writer writer = new FileWriter(this.p.toString());
             this.cache.writeJSONString(writer);
             writer.close();
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (IOException ex) {
+            DialogsAndAlert.errorToDevTeam(ex,"Committing to Json");
         }
     }
 
@@ -77,9 +91,9 @@ public class SettingsPersister {
         }
         this.cache.put("username",m.getUsername());
         this.cache.put("loginUsername",m.getLoginUsername());
-        System.out.println("saving : " + this.cache.toJSONString());
         this.commit();
     }
+
     public void cleanup() throws IOException {
         try {
             JSONObject json = new JSONObject();
@@ -87,9 +101,10 @@ public class SettingsPersister {
             json.writeJSONString(writer);
             writer.close();
         }catch (IOException ex){
-            ex.printStackTrace();
+            DialogsAndAlert.Infomation("Logout not successful");
         }
     }
+
     public JSONObject getAllSettingsJson(){
         return this.cache;
     }
